# gfxreconstruct

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  DEBUG_android.md  HOWTO_android.md  HOWTO_meta_quest.md  Jenkinsfile  Jenkinsfile.extended  Jenkinsfile.manual  LICENSE.txt  LICENSE_ThirdParty.txt  RAYTRACING_VULKAN.md  README.md  TESTING_test_apps.md  USAGE.md  USAGE_android.md  USAGE_desktop.md  USAGE_desktop_D3D12.md  USAGE_desktop_OpenXR.md  USAGE_desktop_Vulkan.md  build.py  log_vk_device_generated_cmds.txt  project_version.cpp  project_version.h.in  project_version_string.h.in  runJob.bat  runJob.groovy  runJob.sh  runJobAndroid.sh  runJobManual.groovy  test.py  test.ref  test_suite.ref  version.rc  (+2 more)
android/compatibility/: CMakeLists.txt
android/layer/: .gitignore  CMakeLists.txt  build.gradle
application/: CMakeLists.txt  application.cpp  application.h  wayland_application.cpp  wayland_application.h  wayland_window.cpp  wayland_window.h  win32_application.cpp  win32_application.h  win32_window.cpp  win32_window.h  xcb_application.cpp  xcb_application.h  xcb_window.cpp  xcb_window.h
application/compress/: CMakeLists.txt  main.cpp
application/replay/: CMakeLists.txt  main.cpp
application/toascii/: CMakeLists.txt  main.cpp
compatibility/: CMakeLists.txt  swapchain_image_tracker.h  vulkan_captured_swapchain.cpp  vulkan_captured_swapchain.h  vulkan_swapchain.h  vulkan_virtual_swapchain.cpp  vulkan_virtual_swapchain.h
format/: CMakeLists.txt  api_call_id.h  custom_encoder_commands.h  custom_struct_decoders.cpp  custom_struct_decoders.h  custom_struct_decoders_forward.h  custom_struct_encoders.cpp  custom_struct_encoders.h  decoder.h  decompress_decoder.cpp  decompress_decoder.h  descriptor_update_template_decoder.cpp  descriptor_update_template_decoder.h  file_processor.cpp  file_processor.h  format.h  memory_tracker.cpp  memory_tracker.h  metadata.h  metadata_decoder.h  metadata_encoder.h  metadata_handler.cpp  metadata_handler.h  parameter_encoder.h  platform_types.h  pnext_typed_node.h  pointer_decoder.h  pointer_decoder_base.h  string_array_decoder.cpp  string_array_decoder.h  string_decoder.cpp  string_decoder.h  struct_pointer_decoder.h  struct_pointer_decoder_nvx.h  struct_pointer_encoder.h  trace_manager.cpp  trace_manager.h  trace_pnext_util.h  value_decoder.h  vulkan_ascii_consumer.cpp  (+16 more)
framework/application/: CMakeLists.txt  android_application.cpp  android_application.h  android_context.cpp  android_context.h  android_jni.cpp  android_window.cpp  android_window.h  application.cpp  application.h  display_context.cpp  display_context.h  display_window.cpp  display_window.h  headless_application.cpp  headless_application.h  headless_context.cpp  headless_context.h  headless_window.cpp  headless_window.h  metal_context.h  metal_context.mm  metal_window.h  metal_window.mm  wayland_application.cpp  wayland_application.h  wayland_context.cpp  wayland_context.h  wayland_window.cpp  wayland_window.h  win32_application.cpp  win32_application.h  win32_context.cpp  win32_context.h  win32_window.cpp  win32_window.h  wsi_context.cpp  wsi_context.h  xcb_application.cpp  xcb_application.h  (+10 more)
framework/decode/: CMakeLists.txt  ags_detection_consumer.h  ags_gpu_cmd_wrapper.cpp  ags_gpu_cmd_wrapper.h  annotation_handler.h  api_decoder.h  api_payload.h  asset_file_consumer.cpp  asset_file_consumer.h  async_processor.cpp  async_processor.h  block_allocator.cpp  block_allocator.h  block_batch.cpp  block_batch.h  block_buffer.cpp  block_buffer.h  block_parser.cpp  block_parser.h  common_consumer_base.h  common_handle_mapping_util.h  common_object_info_table.cpp  common_object_info_table.h  common_struct_handle_mappers.h  compression_converter.cpp  compression_converter.h  copy_shaders.h  custom_ags_ascii_consumer.cpp  custom_ags_ascii_consumer.h  custom_ags_consumer_base.h  custom_ags_decoder.cpp  custom_ags_decoder.h  custom_ags_replay_consumer.cpp  custom_ags_replay_consumer.h  custom_ags_struct_decoders.cpp  custom_ags_struct_decoders.h  custom_common_struct_decoders.cpp  custom_common_struct_decoders.h  custom_common_struct_decoders_forward.h  custom_common_struct_to_json.cpp  (+321 more)
framework/encode/: CMakeLists.txt  ags_dispatch_table.h  api_capture_manager.cpp  api_capture_manager.h  capture_manager.cpp  capture_manager.h  capture_settings.cpp  capture_settings.h  command_writer.cpp  (+122 more)
layer/: CMakeLists.txt  README.md  USAGE_android.md  USAGE_desktop.md  VkLayer_gfxreconstruct.def  VkLayer_gfxreconstruct.exp  VkLayer_gfxreconstruct.map  custom_api_call_encoders.cpp  custom_api_call_encoders.h  custom_vulkan_api_call_encoders.cpp  custom_vulkan_api_call_encoders.h  d3d12.def  d3d12_capture.def  dll_main.cpp  dll_main_d3d12.cpp  dll_main_dxgi.cpp  dxgi.def  layer_vulkan_entry.cpp  layer_vulkan_entry.h  trace_layer.cpp  trace_layer.def  trace_layer.h  trace_layer_with_xr.def  vk_dispatch_table_helper.h  vk_layer_dispatch_table.h  vk_layer_settings.txt  vulkan_entry_layer.cpp  vulkan_entry_layer.h
test/: CMakeLists.txt  run-tests.ps1  run-tests.sh  run-tests_macos.sh  verify-gfxr.cpp  verify-gfxr.h  vkLayer.json
tools/: CMakeLists.txt  platform_debug_helper.cpp  tool_settings.cpp  tool_settings.h
util/: CMakeLists.txt  application.cpp  application.h  argument_parser.cpp  argument_parser.h  compressor.cpp  compressor.h  defines.h  file_output_stream.cpp  file_output_stream.h  graphics_memory.h  graphics_memory_allocator.h  logging.h  lz4_compressor.cpp  lz4_compressor.h  lz77_compressor.h  memory_output_stream.cpp  memory_output_stream.h  metadata.h  output_stream.h  page_guard_manager.cpp  page_guard_manager.h  page_status_tracker.cpp  page_status_tracker.h  passthrough_memory_allocator.cpp  passthrough_memory_allocator.h  platform.h  surface_factory.h  wayland_application.cpp  wayland_application.h  wayland_surface_factory.h  wayland_window.cpp  wayland_window.h  win32_application.cpp  win32_application.h  win32_surface_factory.h  win32_window.cpp  win32_window.h  window.cpp  window.h  (+5 more)
(+667 files in other folders)
